# petitset

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  RELEASES.md
.github/workflows/: ci.yml
petitset_serde_test/: Cargo.toml
petitset_serde_test/tests/: serde.rs
serde_tests/: Cargo.toml
serde_tests/tests/: serde.rs
src/: lib.rs  map.rs  serde.rs  set.rs  set_algebra.rs  utils.rs
tests/: map.rs  predicates.rs  set.rs
tools/ci/src/: main.rs
