[package]
name = "petitset"
description = "An ordered set data structure, optimized for stack-allocated storage of a tiny number of elements with a fixed cap."
version = "0.1.0"
authors = ["Leafwing Studios"]
homepage = "https://leafwing-studios.com"
repository = "https://github.com/leafwing-studios/petitset"
license = "MIT + APACHE"
edition = "2021"
categories = ["data-structures"]
keywords = ["set"]
exclude = ["tools/**/*", "github/**/*"]
rust = "1.57"

[profile.dev]
opt-level = 3

[workspace]
members = ["./", "tools/ci"]

[dependencies]
thiserror = { version = "1.0", optional = true }

[features]
# Implements the thiserror::Error and std::Error traits
# Incompatible with no_std
thiserror_trait = ["thiserror"]