[package]
name = "petitset"
description = "An ordered set data structure, optimized for stack-allocated storage of a tiny number of elements with a fixed cap."
version = "0.1.0"
authors = ["Leafwing Studios"]
homepage = "https://leafwing-studios.com"
repository = "https://github.com/leafwing-studios/petitset"
license = "MIT + APACHE"
edition = "2021"
categories = ["data-structures"]
keywords = ["set"]
exclude = ["tools/**/*", "github/**/*"]

[profile.dev]
opt-level = 3

[workspace]
members = ["./", "tools/ci"]

[dependencies]
thiserror = { version = "1.0", optional = true }

[features]
# Implements the thiserror::Error and std::Error traits
# Incompatible with no_std
thiserror_trait = ["thiserror"]
# Implements set algebra operations (union, intersection, difference and symmetric difference)
# Works perfectly, but relies on the incomplete nightly feature `generic_const_exprs`
set_algebra = []