[package]
name = "petitset"
description = "An ordered set data structure, optimized for stack-allocated storage of a tiny number of elements with a fixed cap."
version = "0.2.0"
authors = ["Leafwing Studios"]
homepage = "https://leafwing-studios.com"
repository = "https://github.com/leafwing-studios/petitset"
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["data-structures"]
keywords = ["set", "map"]
exclude = ["tools/**/*", ".github/**/*"]

[workspace]
members = ["./", "tools/ci"]

[dependencies]
thiserror = { version = "1.0", optional = true }
serde = { version = "1.0", optional = true }

[features]
# Not intrinsically useful: enabling this will break no-std
std = []
# Implements the thiserror::Error and std::Error traits
thiserror = ["dep:thiserror", "std"]
# Implements Serialize and Deserialize
serde = ["dep:serde", "std"]
# Implements set algebra operations (union, intersection, difference and symmetric difference)
# Works perfectly, but relies on the incomplete nightly feature `generic_const_exprs`
set_algebra = []
